major refactor including method signatures, archived check logic